Compiler/tests/bad/array1.nx
type t = [0 .. 10];

val x : t filled by 3

print(x[2]);
